Dev (#332)
* fixed event host bug

* fixed PlayerInteractEvent NPE on tracker use

* fixed soup regen on FFA

* fixed spectators stuck after rollback complete

* fixed NPE during boxing statistic fetching

* fixed non solid blocks and added rollback priority sorting

* added new settings to FFA that lets players heal back to full HP when killing another player

* implemented party member limit per group

* added armor trim cosmetics

* updated guis.yml version

* updated plugin.yml

* added cosmetic permission reset in case player loses it, added reset option to main gui

* added soup bowl removal mechanic

* refactored single commands

* added protection rules to config, making lobby interactions toggleable

* removed weightclass toggle when ladder doesn't support both

* Fix lobby protection allow-velocity and more protection setting (#339)

* Fix Lobby knockback

* Add missing lobby protection

* fix: prevent arrow hit message when damage event is cancelled

* small refactor

* added death effects and shield customization
added permission explanation of cosmetics to README.md
added cosmetics icon to lobby inventory

* updated workflow steps

* Modernize default ladders (#340)

* fixed armor trim bug where it applied trim to wrong armor type

* Revert "fixed armor trim bug where it applied trim to wrong armor type"

This reverts commit 1cae3c1229be6b49fbaf5a21ca88704cf1ccbd98.

* updated for armor trim bug #2

* fixed temporary build ladders to return to same hand

* changed version to 7.1.0-SNAPSHOT

---------

Co-authored-by: MISHA <208148594+lokspel@users.noreply.github.com>