@@ -6,6 +6,9 @@ import dev.nandi0813.practice.manager.gui.guis.customladder.PlayerCustomKitSelec
 import dev.nandi0813.practice.manager.gui.guis.profile.ProfileSettingsGui;
 import dev.nandi0813.practice.manager.ladder.abstraction.normal.NormalLadder;
 import dev.nandi0813.practice.manager.ladder.abstraction.playercustom.CustomLadder;
+import dev.nandi0813.practice.manager.party.Party;
+import dev.nandi0813.practice.manager.party.PartyManager;
+import dev.nandi0813.practice.manager.profile.cosmetics.CosmeticsData;
 import dev.nandi0813.practice.manager.profile.enums.ProfileStatus;
 import dev.nandi0813.practice.manager.profile.enums.ProfileWorldTime;
 import dev.nandi0813.practice.manager.profile.group.Group;
@@ -74,6 +77,9 @@ public class Profile {
     private ProfileSettingsGui settingsGui;
     private ActionBar actionBar = new ActionBar(this);
 
+    // Cosmetics data for armor trims
+    private CosmeticsData cosmeticsData = new CosmeticsData();
+
     // Custom ladder
     private PlayerCustomKitSelector playerCustomKitSelector;
     private final List<CustomLadder> customLadders = new ArrayList<>();
@@ -117,7 +123,7 @@ public class Profile {
 
         if (this.file.getConfig().isConfigurationSection("player-custom-kit")) {
             this.customLadders.clear();
-            for (String ladder : this.file.getConfig().getConfigurationSection("player-custom-kit").getKeys(false)) {
+            for (String ladder : Objects.requireNonNull(this.file.getConfig().getConfigurationSection("player-custom-kit")).getKeys(false)) {
                 try {
                     int i = Integer.parseInt(ladder);
                     if (i < 0 || i > 5) {
@@ -195,12 +201,20 @@ public class Profile {
         this.eventStartLeft = group.getEventStartLimit();
         this.partyBroadcastLeft = group.getPartyBroadcastLimit();
 
+        Player onlinePlayer = this.player.getPlayer();
+        if (onlinePlayer != null) {
+            Party partyObj = PartyManager.getInstance().getParty(onlinePlayer);
+            if (partyObj != null && onlinePlayer.equals(partyObj.getLeader())) {
+                partyObj.refreshMaxPlayerLimitForLeader();
+            }
+        }
+
         while (this.customLadders.size() < this.group.getCustomKitLimit()) {
             this.customLadders.add(new CustomLadder(this, "player-custom-kit." + customLadders.size(), this.customLadders.size() + 1));
         }
 
         while (this.customLadders.size() > this.group.getCustomKitLimit()) {
-            this.customLadders.remove(this.customLadders.size() - 1);
+            this.customLadders.removeLast();
         }
 
         this.playerCustomKitSelector = new PlayerCustomKitSelector(this);
